# sqlalchemy-postgresql

./: .env.sample  .gitignore  LICENSE  README.md  docker-compose.yml  package.json  pyproject.toml
docker/: Dockerfile  postgresql.conf
scripts/: select_empsalary.py  select_empsalary_rank.py  select_time_history.py  select_time_history_rank.py
sql/: 01_create_table_empsalary.sql  02_insert_into_empsalary.sql  03_create_table_time_history.sql  04_insert_into_time_history.sql
